# anime-manga-cli

./: .gitignore  Cargo.toml  README.md
anime-manga-cli/: Cargo.toml
anime-manga-cli/src/: anime_api.rs  api.rs  app.rs  main.rs  ui.rs
server/: Cargo.toml
server/src/: allanime.rs  main.rs
