[package]
name = "anime-manga-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
viuer = "0.7"
image = "0.24"